# frozen-intelligence

./: Dockerfile  README.md  cli.py  pyproject.toml
docs/research/: fi-competitive-analysis.md  fi-manufacturing.md  fi-software-sdk.md  fi-technical-risks.md  fi-weight-to-metal.md
src/: __init__.py  a2a_handler.py  bitstream_analyzer.py  cdc_checker.py  cell_placer.py  chip_verifier.py  clock_gating.py  clock_tree.py  cost_model.py  datapath_gen.py  drc_checker.py  electromigration.py  equipment_detector.py  esd_designer.py  fault_simulator.py  floorplanner.py  formal_checker.py  fpga_toolkit.py  gdsii_generator.py  hardware_security.py  inference_engine.py  ir_drop.py  jtag_debug.py  latchup_checker.py  layer_simulator.py  memory_controller.py  metal_compiler.py  netlist_gen.py  noc_router.py  package_planner.py  pcie_interface.py  power_estimator.py  quant_research.py  rtl_optimizer.py  rtl_simulator.py  sdc_generator.py  sdk.py  signal_integrity.py  std_cell_lib.py  swarm_tiler.py  (+9 more)
tests/: test_all.py
