[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "frozen-intelligence"
version = "0.1.0"
description = "Mask-locked inference chip design toolchain. The chip IS the agent."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Lucineer", email = "casey@digennaro.dev"}]
keywords = ["chip-design", "inference", "fpga", "tlmm", "mask-locked", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
frozen-intelligence = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
